Enabling proper Light Mode & Dark Mode toggles. Bug fixes too

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+body {
+  @apply bg-primary text-primary text-sm;
+  font-family: 'Lato', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 /* Dark mode's color overrides */
 .dark .bg-primary   { background-color: #202020; }
 .dark .bg-opposite  { background-color: #EEEEEE; }
-.dark .bg-accent    { background-color: #2BACCA; }
-.dark .bg-accent-transparent { background-color: #2BACCA50 }
 .dark .text-primary   {  color: #EEEEEE;  }
 .dark .text-secondary {  color: #202020;  }
